[package]
name = "airport-data"
version = "0.1.0"
edition = "2021"
authors = ["Aashish Vivekanand"]
description = "A comprehensive Rust library for retrieving airport information by IATA codes, ICAO codes, and various other criteria"
license = "CC-BY-4.0"
homepage = "https://airportdata.dev"
repository = "https://github.com/aashishvanand/airport-data-rust"
documentation = "https://docs.rs/airport-data"
keywords = ["airport", "iata", "icao", "aviation", "flight"]
categories = ["data-structures", "science::geo"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
once_cell = "1"

[build-dependencies]
flate2 = "1"
